@@ -2,4 +2,5 @@
 ::2xsaiko			nsplugin&webstart use flags
 ::alxu				depend on virtual/jdk directly, either way it is still a circular dependency...
 ::gentoo-bootstrap	add musl support
+::os-xtoo			use a new eclass, update copyright
 ::pg_overlay		base ebuild
